--- a/game/appmanifest.json
+++ b/game/appmanifest.json
@@ -1,9 +1,9 @@
 ﻿{
-	"name": "A Pixel Western",
-	"short_name": "A Pixel Western",
+	"name": "Autorunner",
+	"short_name": "Autorunner",
 	"start_url": "index.html",
-	"display": "fullscreen",
-	"orientation": "landscape",
+	"display": "standalone",
+	"orientation": "any",
 	"icons": [{
 		"src": "icon-16.png",
 		"sizes": "16x16",
